@@ -7,13 +7,14 @@ import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.gson.GsonFactory;
 import com.google.api.client.util.store.FileDataStoreFactory;
 import com.google.api.services.drive.DriveScopes;
+import com.google.api.services.gmail.GmailScopes;
 import com.hortifruti.sl.hortifruti.config.Base64FileDecoder;
 import com.hortifruti.sl.hortifruti.exception.BackupException;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -50,7 +51,7 @@ public class AuthorizationFlowFactory {
             httpTransport,
             GsonFactory.getDefaultInstance(),
             clientSecrets,
-            Collections.singletonList(DriveScopes.DRIVE))
+            List.of(DriveScopes.DRIVE, GmailScopes.GMAIL_SEND))
         .setDataStoreFactory(new FileDataStoreFactory(new java.io.File(TOKENS_DIRECTORY_PATH)))
         .setAccessType("offline")
         .build();
